--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -8,8 +8,8 @@ docker-build-master-theia-controller:
   before_script:
     - docker login -u "$CI_REGISTRY_USER" -p "$CI_REGISTRY_PASSWORD" $CI_REGISTRY
   script:
-    - docker build --pull -t "$CI_REGISTRY_IMAGE" ./theia-controller
-    - docker push "$CI_REGISTRY_IMAGE"
+    - docker build --pull -t "$CI_REGISTRY_IMAGE_THEIA_CONTROLLER" ./theia-controller
+    - docker push "$CI_REGISTRY_IMAGE_THEIA_CONTROLLER"
   only:
     - master
 
@@ -22,7 +22,7 @@ docker-build-non-master-theia-controller:
   before_script:
     - docker login -u "$CI_REGISTRY_USER" -p "$CI_REGISTRY_PASSWORD" $CI_REGISTRY
   script:
-    - docker build --pull -t "$CI_REGISTRY_IMAGE:$CI_COMMIT_REF_SLUG" ./theia-controller
-    - docker push "$CI_REGISTRY_IMAGE:$CI_COMMIT_REF_SLUG"
+    - docker build --pull -t "$CI_REGISTRY_IMAGE_THEIA_CONTROLLER:$CI_COMMIT_REF_SLUG" ./theia-controller
+    - docker push "$CI_REGISTRY_IMAGE_THEIA_CONTROLLER:$CI_COMMIT_REF_SLUG"
   except:
     - master
