--- a/backend-oauth/package.json
+++ b/backend-oauth/package.json
@@ -17,11 +17,9 @@
     "@kubernetes/client-node": "^0.11.1",
     "cookie-session": "^1.4.0",
     "cors": "^2.8.5",
-    "ejs": "^3.0.1",
     "express": "^4.17.1",
     "mongoose": "^5.9.3",
     "passport": "^0.4.1",
-    "passport-google-oauth20": "^2.0.0",
-    "pug": "^2.0.4"
+    "passport-google-oauth20": "^2.0.0"
   }
 }
