Fixed production docker-compose

--- a/theia-controller/production/theia-controller/docker-compose.yml
+++ b/theia-controller/production/theia-controller/docker-compose.yml
@@ -4,7 +4,7 @@ services:
 
   containerManager:
     container_name: spring-container-manager
-    image: registry.gitlab.com/brandonfox/backend-project-2020/theia-controller
+    image: registry.gitlab.com/brandonfox/backend-project-2020/theia-controller:latest
     privileged: true
     environment:
       NGINX_DOCKER_NAME: nginx-proxy
